--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,19 +1,73 @@
-.welcome_wrapper
-{
-  background: rgba(41, 43, 43, 0.6);
+@media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */ }
+@media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ }
+@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ }
+@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
+@media (min-width:1281px) { /* hi-res laptops and desktops */ }
+
+
+.btn{
+  padding-left:30px;
+  padding-right: 30px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+
 
 }
+
+.welcome_main
+{
+  background-image: url('../img/welcome_1.jpg');
+     width: 100%;
+     min-height: 100vh;
+     height: auto;
+     background-size: cover;
+     background-position: center;
+
+
+
+}
+
+.welcome_second
+{
+  background-image: url('../img/welcome_3.jpg');
+  width: 100%;
+  min-height: 100vh;
+  background-size: cover;
+  background-position: center;
+
+}
+
+
+@media (min-width:641px)  {
+  .welcome_main
+  {
+    background-image: url('../img/welcome_2.jpg');
+       width: 100%;
+       min-height: 100vh;
+       height: auto;
+       background-size: cover;
+
+
+  }
+
+  .welcome_second
+  {
+    background-image: url('../img/welcome_3.jpg');
+    width: 100%;
+    min-height: 100vh;
+    background-size: cover;
+  }
+}
+
+
 
 h1
 {
   color:white;
-}
-
-
-
-h2
-{
-  color:white;
+  font-family: 'Lato', sans-serif;
+  font-size: 42px;
 }
 
 
@@ -33,13 +87,13 @@ h2
 
 
 .card{
-transition: 0.1s ease;
-border: 1px solid white;
-border-radius: 10px;
+  transition: 0.1s ease;
+  border: 1px solid white;
+  border-radius: 10px;
 
 }
 
 .card:hover{
-border: 1px solid gray;
-border-radius: 10px;
+  border: 1px solid gray;
+  border-radius: 10px;
 }
