Added a new controller method in PropertyController to submit the form and to use the Communication model that uses the communication database. Deleted garbage in the file as well. Migration to create the database modified to have the default value for the state of the visit_request, changed the names of some columns and addeed the sms_status. Fixed the property banner to fit better on mobile and desktop. Changed the css for the date and time picker. Changed the bootstrap-datepicker.js to have the date in the format dd-mm-yyyy. Brought the js code for the time and date picker to be in a js file and not in the property blade. Changed the form action to not use a url but instead use the built in route laravel option in the home blade. Changed the default price and text to be the one that is in the database. Added a form in the property blade in the modal to request a visit. Reduced the size of the feature/icons the property has to be better in terms of design. Added the post route in the web.php. Working the insert query in communication database.

--- a/public/css/property.css
+++ b/public/css/property.css
@@ -20,14 +20,22 @@
   -ms-transform: translate(-50%,-50%);
   transform: translate(-50%,-50%);
 }
+
 .thumbnail img.portrait {
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
+@media (min-width:641px)  {
+
+  .thumbnail img.portrait {
+    width: 100%;
+    height: auto;
+  }
+}
+
+
 /* Modal + Carousel*/
-
-
 
 .modal {
   text-align:center;
@@ -44,4 +52,15 @@
 
 .carousel-inner > .item > img {
   display: block;
+}
+
+/* Layout date and time classes/ids */
+.datepicker {
+  background-color: #fff ;
+  color: #333 ;
+}
+
+#timepicker5{
+  background-color: #fff ;
+  color: #333 ;
 }
