--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,21 @@
+.accepted {
+  color: #468847;
+}
+
+.pending
+{
+	color: #f89406;
+}
+
+.pending-requests
+{
+	background-color: #e3a615;
+}
+
+.rejected {
+  color: #b94a48;
+}
+
 .img-responsive{
 	height:428px;
 	margin: auto;
