--- a/public/css/property.css
+++ b/public/css/property.css
@@ -1,3 +1,21 @@
+.accepted {
+  color: #468847;
+}
+
+.pending
+{
+	color: #f89406;
+}
+
+.pending-requests
+{
+	background-color: #e3a615;
+}
+
+.rejected {
+  color: #b94a48;
+}
+
 /* Main House Image */
 
 .thumbnail {
