--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,3 +1,21 @@
+.accepted {
+  color: #468847;
+}
+
+.pending
+{
+	color: #f89406;
+}
+
+.pending-requests
+{
+	background-color: #e3a615;
+}
+
+.rejected {
+  color: #b94a48;
+}
+
 @media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */ }
 @media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ }
 @media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ }
