--- a/public/css/home.css
+++ b/public/css/home.css
@@ -17,10 +17,12 @@
 }
 
 .img-responsive{
+  width: 100%;
 	height:428px;
-	margin: auto;
-	border-top-left-radius: 8px;
-	border-top-right-radius: 8px;
+  margin: auto;
+
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
 }
 
 .panel-heading{
@@ -32,66 +34,12 @@
 }
 
 .panel-footer{
-	border-bottom-left-radius: 8px;
-	border-bottom-right-radius: 8px;
+	border-bottom-left-radius: 1px;
+	border-bottom-right-radius: 1px;
 }
 
 .panel{
-	border-radius: 8px;
-}
-
-
-
-
-@supports (--css: variables) {
-input[type="range"].multirange {
-	padding: 0;
-	margin: 0 auto;
-	display: block;
-	vertical-align: top;
-}
-
-input[type="range"].multirange.original {
-	position: absolute;
-}
-
-input[type="range"].multirange.original::-webkit-slider-thumb {
-	position: relative;
-	border-radius: 50%;
-	 width: 25px;
-  height: 25px;
-	z-index: 2;
-  border: 2px solid white;
-  cursor: pointer;
-  transition: .3s ease-in-out;
-}
-
-input[type="range"].multirange.original::-moz-range-thumb {
-	transform: scale(1); /* FF doesn't apply position it seems */
-	z-index: 1;
-}
-
-input[type="range"].multirange::-moz-range-track {
-	border-color: transparent; /* needed to switch FF to "styleable" control */
-}
-
-input[type="range"].multirange.ghost {
-	position: relative;
-	background: var(--track-background);
-	--track-background: linear-gradient(to right,
-	transparent var(--low), var(--range-color) 0,
-	var(--range-color) var(--high), transparent 0
-	) no-repeat 0 45% / 100% 40%;
-	--range-color: #3aaa50;
-}
-
-input[type="range"].multirange.ghost::-webkit-slider-runnable-track {
-	background: var(--track-background);
-}
-
-input[type="range"].multirange.ghost::-moz-range-track {
-	background: var(--track-background);
-}
+	border-radius: 1px;
 }
 
 
@@ -115,19 +63,18 @@ input[type="range"].multirange.ghost::-moz-range-track {
 	width: 100%;
 	height:250px;
 	margin: auto;
-	border-top-left-radius: 8px;
-	border-top-right-radius: 8px;
+	border-top-left-radius: 2px;
+	border-top-right-radius: 2px;
 }
 
 .panel{
 	border-radius: 8px;
-	-webkit-box-shadow: 0 0 3px 0 rgba(0, 0, 0, 1);
 }
 
 .panel-footer{
 	padding:4px 15px;
-	border-bottom-left-radius: 8px;
-	border-bottom-right-radius: 8px;
+	border-bottom-left-radius: 1px;
+	border-bottom-right-radius: 1px;
 
 }
 .pagination {
@@ -135,7 +82,7 @@ input[type="range"].multirange.ghost::-moz-range-track {
 }
 
 .active{
-    border-radius: 2px;
+    border-radius: 1px;
     font-size: 9px;
 }
 
