--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -30,8 +30,10 @@
 	margin-left: -20px;
 }
 
-
-
+.logo-img{
+    display: block;
+    width: 10%;
+}
 
 @supports (--css: variables) {
 input[type="range"].multirange {
@@ -104,36 +106,67 @@ input[type="range"].multirange.ghost::-moz-range-track {
 .img-responsive{
 	width: 100%;
 	height:250px;
-	margin: auto;
-	border-top-left-radius: 8px;
-	border-top-right-radius: 8px;
+	border-top-left-radius: 0px;
+	border-top-right-radius: 0px;
 }
 
 .panel{
-	border-radius: 8px;
+	border-radius: 0px;
+	margin-bottom: 0px;
 	-webkit-box-shadow: 0 0 3px 0 rgba(0, 0, 0, 1);
 }
 
 .panel-footer{
 	padding:4px 15px;
-	border-bottom-left-radius: 8px;
-	border-bottom-right-radius: 8px;
+	border-bottom-left-radius: 0px;
+	border-bottom-right-radius: 0px;
 
 }
 .pagination {
     	display: initial;
 }
 
+.col-md-6, .col-sm-10 {
+	 padding-left: 0px;
+   padding-right: 0px;
+}
+
 .active{
-    border-radius: 2px;
+    border-radius: 0px;
     font-size: 9px;
+}
+
+.container {
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 .slide, p{
 	color:#999999;
 	text-align: center;
 	font-size: 20px;
-
 }
+/*
+.btn {
+  flex: 1 1 auto;
+  margin: 10px;
+  padding: 20px;
+  border: 2px solid #f7f7f7;
+  text-align: center;
+  text-transform: uppercase;
+  position: relative;
+  overflow:hidden;
+  transition: .3s;
+
+  &:hover {
+    cursor: pointer;
+
+    &:after {
+      width: 100%;
+      left: 0;
+		  box-shadow: inset 0px 0px 0px 5px #f7f7f7;
+    }
+
+  }*/
 
 }
