--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -36,7 +36,7 @@
 
 .welcome_main
 {
-  background-image: url('../img/welcome_1.jpg');
+  background-image: url('../img/welcome/1.jpg');
      width: 100%;
      min-height: 100vh;
      height: auto;
@@ -49,7 +49,7 @@
 
 .welcome_second
 {
-  background-image: url('../img/welcome_3.jpg');
+  background-image: url('../img/welcome/3.jpg');
   width: 100%;
   min-height: 100vh;
   background-size: cover;
@@ -61,7 +61,7 @@
 @media (min-width:641px)  {
   .welcome_main
   {
-    background-image: url('../img/welcome_2.jpg');
+    background-image: url('../img/welcome/2.jpg');
        width: 100%;
        min-height: 100vh;
        height: auto;
@@ -72,7 +72,7 @@
 
   .welcome_second
   {
-    background-image: url('../img/welcome_3.jpg');
+    background-image: url('../img/welcome/3.jpg');
     width: 100%;
     min-height: 100vh;
     background-size: cover;
