--- a/public/css/property.css
+++ b/public/css/property.css
@@ -44,7 +44,63 @@
   margin: auto;
   cursor: pointer;
   overflow:hidden;
+}
 
+.icons{
+  display: flex;
+  margin: 0 auto;
+}
+
+.btn.icon-padding{
+  padding: 0px;
+  cursor: pointer;
+  transition: all 0.3s ease-out;
+}
+}
+
+.btn.icon-padding:hover {
+  background: #06D85F;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+/*  background: rgba(0, 0, 0, 0.7);*/
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+}
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.popup {
+  margin: 120px auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 30%;
+  height: 230px;
+  position: relative;
+  transition: all 3s ease-in-out;
+}
+
+.popup .close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
+}
+.popup .close:hover {
+  color: #06D85F;
 }
 /* Main House Image */
 
@@ -63,6 +119,20 @@
     width:auto ;
     padding: 0;
     margin: 0;
+  }
+  .icons{
+    display: flex;
+  }
+
+  .popup {
+    margin: 120px auto;
+    padding: 20px;
+    background: #fff;
+    border-radius: 5px;
+    width: 50%;
+    height: auto;
+    position: relative;
+    transition: all 5s ease-in-out;
   }
 }
 
