Hide/Show works fine, new field notifications

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -40,6 +40,14 @@ p{
     height: 200px;
 }
 
+.expando
+{
+  display: none;
+}
+
+.expando:target {
+  display: block;
+}
 
 @media (max-width: 700px){
 
