--- a/public/css/profile/profile.css
+++ b/public/css/profile/profile.css
@@ -19,3 +19,16 @@
 }
 
 /* END Notifications */
+
+
+.rotate{
+    -moz-transition: all 0.3s linear;
+    -webkit-transition: all 0.3s linear;
+    transition: all 0.3s linear;
+}
+
+.rotate.swap{
+    -moz-transform:rotate(180deg);
+    -webkit-transform:rotate(180deg);
+    transform:rotate(180deg);
+}
