Availability merge working. Links and clean up some code

--- a/public/css/profile/profile.css
+++ b/public/css/profile/profile.css
@@ -32,3 +32,6 @@
     -webkit-transform:rotate(180deg);
     transform:rotate(180deg);
 }
+
+.btn-default.btn-on.active{background-color: #5BB75B;color: white;}
+.btn-default.btn-off.active{background-color: #DA4F49;color: white;}
