--- a/public/css/profile/profile.css
+++ b/public/css/profile/profile.css
@@ -33,5 +33,9 @@
     transform:rotate(180deg);
 }
 
-.btn-default.btn-on.active{background-color: #5BB75B;color: white;}
-.btn-default.btn-off.active{background-color: #DA4F49;color: white;}
+.btn-on.active{background-color: #5BB75B;color: white;}
+.btn-on.active:hover{background-color: #5BB75B;color: white;}
+
+
+.btn-off.active{background-color: #DA4F49;color: white;}
+.btn-off.active:hover{background-color: #DA4F49;color: white;}
