The layout for the main basic stuff is ready. Missing the landlord page and the book visit still

--- a/public/css/property.css
+++ b/public/css/property.css
@@ -1,5 +1,7 @@
-
-
+.bootstrap-datetimepicker-widget table td.today:before
+{
+  display:none;
+}
 
 .accepted {
   color: #468847;
@@ -38,16 +40,4 @@
     cursor: pointer;
     overflow:hidden;
   }
-}
-
-
-/* Layout date and time classes/ids */
-.datepicker {
-  background-color: #fff ;
-  color: #333 ;
-}
-
-#timepicker5{
-  background-color: #fff ;
-  color: #333 ;
 }
