--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,7 +1,7 @@
 .card-img-top {
-    width: 100%;
-    height: 15vw;
-    object-fit: cover;
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
 }
 
 .img-responsive{
@@ -10,7 +10,7 @@
   margin: auto;
 }
 
-  @media (max-width: 700px){
+@media (max-width: 700px){
   .img-responsive{
     width: 100%;
     height:250px;
@@ -20,11 +20,21 @@
 
 input[type="radio"]
 {
-    display:none;
+  display:none;
 }
 
 label + input[type="radio"]
 {
-    position: relative;
-    cursor:pointer;
+  position: relative;
+  cursor:pointer;
+}
+
+
+
+.pagination,
+.pagination li a {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
