--- a/public/css/property.css
+++ b/public/css/property.css
@@ -1,3 +1,10 @@
+input[readonly].datetimepicker{
+  background-color:transparent;
+  border: 0;
+  font-size: 1em;
+  background-image: linear-gradient(0deg,#9c27b0 2px,rgba(156,39,176,0) 0),linear-gradient(0deg,#d2d2d2 1px,hsla(0,0%,82%,0) 0);
+}
+
 .price_title {
   background-color: #fff;
   color: #FF084A;
